--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: "Inter Web";
+    font-weight: 400;
+    src: url("../Fonts/Inter-Regular.woff2") format("woff2");
+}
+
+@font-face {
+    font-family: "Inter Web";
+    font-weight: 700;
+    src: url("../Fonts/Inter-Bold.woff2") format("woff2");
+}
+
 /*
     Elements: Page
     ---
@@ -7,7 +19,8 @@
 html {
     font-size: 16px;
     line-height: 1.5;
-    font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
+    /* font-family: "Inter Web", "Helvetica Neue", Helvetica, arial, sans-serif;*/
+    font-family: "droid-serif", Georgia, serif;
     color: #5C6366;
     padding: 48px 24px 24px;
 }
@@ -50,6 +63,7 @@ img {
 h1,
 h2,
 h3 {
+    font-family: "Inter Web", "Helvetica Neue", Arial, Helvetica, sans-serif;
     color:#17181A;
 }
 
