--- a/css/screen.css
+++ b/css/screen.css
@@ -22,6 +22,7 @@ html {
     font-family: "droid-serif", Georgia, serif;
     color: #5C6366;
     padding: 48px 24px 24px;
+    -webkit-font-smoothing: antialiased;
 }
 
 body {
@@ -77,6 +78,10 @@ h2 {
     font-size: 23px;
     line-height: 32px;
     margin: 0 0 24px;
+}
+
+* + h2{
+    margin-top: 48px;
 }
 
 h3 {
@@ -153,6 +158,39 @@ a:active {
 a:hover,
 a:focus {
     color: #1ABAFF;
+}
+
+.c-author{
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    margin-bottom: 24px;
+}
+
+.c-author__avatar{
+    width: 56px;
+    height: 56px;
+    border-radius: 100%;
+}
+
+.c-author__description{
+    margin-left: 16px;
+}
+
+.c-author__name,
+.c-author__job{
+    margin-bottom: 0;
+}
+
+.c-author__name{
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.c-author__job{
+    font-family: "Inter Web", sans-serif;
+    font-size: 14px;
+    line-height: 24px;
 }
 
 /* Small devices (landscape phones, 576px and up) */
